# tfps

./: CMakeLists.txt  ReadMe.md
doc/: CMakeLists.txt  doxygen.conf.in
run_src/: main.cpp
trainfps_library/: CMakeLists.txt
trainfps_library/src/: data_structs.cpp  data_structs.h  fps_calc.cpp  fps_calc.h  main.cpp  main.h  parcer.cpp  parcer.h
